--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -24,11 +25,64 @@
                 </div>
             </nav>
         </div>
-        <div class="site-tittle">
-
-        </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <div></div>
+        <div></div>
+    </main>
+    <footer>
+        <div class="footer-1">
+            <div>
+                <h3>Consulting Agency For Your Business</h3>
+                <p>The quix fox jumps over the lazy dog</p>
+            </div>
+            <a href="">Contáctanos</a>
+        </div>
+        <div class="footer-2">
+            <div>
+                <h5>Company Info</h5>
+                <p>About Us</p>
+                <p>Carrier</p>
+                <p>We are hiring</p>
+                <p>Blog</p>
+            </div>
+            <div>
+                <h5>Company Info</h5>
+                <p>About Us</p>
+                <p>Carrier</p>
+                <p>We are hiring</p>
+                <p>Blog</p>
+            </div>
+            <div>
+                <h5>Company Info</h5>
+                <p>About Us</p>
+                <p>Carrier</p>
+                <p>We are hiring</p>
+                <p>Blog</p>
+            </div>
+            <div>
+                <h5>Company Info</h5>
+                <p>About Us</p>
+                <p>Carrier</p>
+                <p>We are hiring</p>
+                <p>Blog</p>
+            </div>
+            <div>
+                <h5>Company Info</h5>
+                <p>About Us</p>
+                <p>Carrier</p>
+                <p>We are hiring</p>
+                <p>Blog</p>
+            </div>
+        </div>
+        <div class="footer-3">
+            <p>Desarrollado por Daniela Cisneros & José Alexis Moreno</p>
+            <div class="footer-icons">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
