contact form components

--- a/index.html
+++ b/index.html
@@ -28,9 +28,41 @@
     </header>
     <main>
         <div></div>
-        <div></div>
+        <div class="site-contact">
+            <div class="contact-header">
+                <div>
+                    <h3>We have branches all over</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, nisi tempora cupiditate delectus ipsa reprehenderit quas.</p>
+                </div>
+                <img src="assets/map.svg">
+            </div>
+            <div class="contact-form">
+                <img src="https://images.unsplash.com/photo-1543269866-487350d6fa5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGJ1c2luZXNzJTIwd29tYW58ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+                <div>
+                    <form class="form">
+                        <h4>Contáctate con nosotros</h4>
+                        <div class="form-input">
+                            <label>Nombre</label>
+                            <input type="text">
+                        </div>
+                        <div class="form-input">
+                            <label>Apellido</label>
+                            <input type="text">
+                        </div>
+                        <div class="form-input">   
+                            <label>Email</label>
+                            <input type="email">
+                        </div>
+                        <div>
+                            <br>
+                            <a href="" class="form-btn">Enviar</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
+    <footer class="site-footer">
         <div class="footer-1">
             <div>
                 <h3>Consulting Agency For Your Business</h3>
@@ -40,39 +72,38 @@
         </div>
         <div class="footer-2">
             <div>
-                <h5>Company Info</h5>
+                <h5>Información</h5>
                 <p>About Us</p>
                 <p>Carrier</p>
                 <p>We are hiring</p>
                 <p>Blog</p>
             </div>
             <div>
-                <h5>Company Info</h5>
+                <h5>Legal</h5>
                 <p>About Us</p>
                 <p>Carrier</p>
                 <p>We are hiring</p>
                 <p>Blog</p>
             </div>
             <div>
-                <h5>Company Info</h5>
+                <h5>Características</h5>
                 <p>About Us</p>
                 <p>Carrier</p>
                 <p>We are hiring</p>
                 <p>Blog</p>
             </div>
             <div>
-                <h5>Company Info</h5>
+                <h5>Recursos</h5>
                 <p>About Us</p>
                 <p>Carrier</p>
                 <p>We are hiring</p>
                 <p>Blog</p>
             </div>
             <div>
-                <h5>Company Info</h5>
-                <p>About Us</p>
-                <p>Carrier</p>
-                <p>We are hiring</p>
-                <p>Blog</p>
+                <h5>Encuéntranos</h5>
+                <p><i class="bi bi-telephone"></i> (593) 229-847-5316</p>
+                <p><i class="bi bi-geo-alt"></i> Carrier</p>
+                <p><i class="bi bi-envelope"></i> brand@example.com</p>
             </div>
         </div>
         <div class="footer-3">
