changes in form position

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
                 <img src="https://images.unsplash.com/photo-1543269866-487350d6fa5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGJ1c2luZXNzJTIwd29tYW58ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
                 <div>
                     <form class="form">
-                        <h4>Contáctate con nosotros</h4>
+                        <h3>Contáctate con nosotros</h3>
                         <div class="form-input">
-                            <label>Nombre</label>
+                            <label>Nombre</label><br>
                             <input type="text">
                         </div>
                         <div class="form-input">
-                            <label>Apellido</label>
+                            <label>Apellido</label><br>
                             <input type="text">
                         </div>
                         <div class="form-input">   
-                            <label>Email</label>
+                            <label>Email</label><br>
                             <input type="email">
                         </div>
                         <div>
@@ -61,6 +61,7 @@
                 </div>
             </div>
         </div>
+        <div class="separador"></div>
     </main>
     <footer class="site-footer">
         <div class="footer-1">
