princing table components

--- a/index.html
+++ b/index.html
@@ -27,11 +27,126 @@
         </div>
     </header>
     <main>
-        <div></div>
+        <div class="site-price">
+            <div class="price-header">
+                <h2>Precios</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam adipisci voluptatum, reprehenderit quidem consequatur delectus libero, vel esse! Id, dolor alias! Sit eveniet recusandae fuga dolore.</p>
+            </div>
+            <div class="pricing-table">
+                <div class="price-table">
+                    <div class="price-title">
+                        <span>Básico</span>
+                    </div>
+                    <div class="price-price">
+                        <span class="price-value" ><i class="bi bi-currency-dollar"></i>10</span>
+                        <span class="price-sub">Subtitulo</span>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" disabled>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" disabled>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" disabled>
+                                <label>Option 1</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="price-btn">
+                        <a href="" class="price-a">Adquirir ahora</a>
+                    </div>
+                </div>
+                <div class="price-table">
+                    <div class="price-title">
+                        <span>Standard</span>
+                    </div>
+                    <div class="price-price">
+                        <span class="price-value"><i class="bi bi-currency-dollar"></i>10</span>
+                        <span class="price-sub">Subtitulo</span>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" disabled>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" disabled>
+                                <label>Option 1</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="price-btn">
+                        <a href="" class="price-a">Adquirir ahora</a>
+                    </div>
+                </div>
+                <div class="price-table">
+                    <div class="price-title">
+                        <span>Premiun</span>
+                    </div>
+                    <div class="price-price">
+                        <span class="price-value"><i class="bi bi-currency-dollar"></i>10</span>
+                        <span class="price-sub">Subtitulo</span>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" checked>
+                                <label>Option 1</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="price-btn">
+                        <a href="" class="price-a">Adquirir ahora</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="site-contact">
             <div class="contact-header">
                 <div>
-                    <h3>We have branches all over</h3>
+                    <h2>We have branches all over</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, nisi tempora cupiditate delectus ipsa reprehenderit quas.</p>
                 </div>
                 <img src="assets/map.svg">
