--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <main>
         <div class="site-price">
             <div class="price-header">
-                <h2>Precios</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam adipisci voluptatum, reprehenderit quidem consequatur delectus libero, vel esse! Id, dolor alias! Sit eveniet recusandae fuga dolore.</p>
+                <h2>Elige tu suscripción</h2>
+                <p>¿Te gustaría mejorar tu nivel o hablar con fluidez? <br> Elige el plan de aprendizaje que mejor se adapta a tus objetivos:  básico, premium, profesional</p>
             </div>
             <div class="pricing-table">
                 <div class="price-table">
@@ -38,30 +38,30 @@
                         <span>Básico</span>
                     </div>
                     <div class="price-price">
-                        <span class="price-value" ><i class="bi bi-currency-dollar"></i>10</span>
-                        <span class="price-sub">Subtitulo</span>
+                        <span class="price-value" ><i class="bi bi-currency-dollar"></i>19.99</span>
+                        <span class="price-sub">por una sola cuenta al mes</span>
                     </div>
                     <div class="price-content">
                         <ul>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Acceso a la plataforma para contenido exclusivo</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Sesiones con expertos en vivo</span>
                             </li>
                             <li>
-                                <input type="checkbox" disabled>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle"></i>
+                                <span>Grabaciones de las sesiones</span>
                             </li>
                             <li>
-                                <input type="checkbox" disabled>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle"></i>
+                                <span>Certificación al finalizar el curso</span>
                             </li>
                             <li>
-                                <input type="checkbox" disabled>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle"></i>
+                                <span>Beneficios por ser miembro de la comunidad</span>
                             </li>
                         </ul>
                     </div>
@@ -71,33 +71,33 @@
                 </div>
                 <div class="price-table">
                     <div class="price-title">
-                        <span>Standard</span>
+                        <span>Premium</span>
                     </div>
                     <div class="price-price">
-                        <span class="price-value"><i class="bi bi-currency-dollar"></i>10</span>
-                        <span class="price-sub">Subtitulo</span>
+                        <span class="price-value"><i class="bi bi-currency-dollar"></i>49.99</span>
+                        <span class="price-sub">por una sola cuenta al mes</span>
                     </div>
                     <div class="price-content">
                         <ul>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Acceso a la plataforma para contenido exclusivo</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Sesiones con expertos en vivo</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Grabaciones de las sesiones</span>
                             </li>
                             <li>
-                                <input type="checkbox" disabled>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Certificación al finalizar el curso</span>
                             </li>
                             <li>
-                                <input type="checkbox" disabled>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle"></i>
+                                <span>Beneficios por ser miembro de la comunidad</span>
                             </li>
                         </ul>
                     </div>
@@ -107,33 +107,33 @@
                 </div>
                 <div class="price-table">
                     <div class="price-title">
-                        <span>Premiun</span>
+                        <span>Profesional</span>
                     </div>
                     <div class="price-price">
-                        <span class="price-value"><i class="bi bi-currency-dollar"></i>10</span>
-                        <span class="price-sub">Subtitulo</span>
+                        <span class="price-value"><i class="bi bi-currency-dollar"></i>119.99</span>
+                        <span class="price-sub">por tres cuentas al mes</span>
                     </div>
                     <div class="price-content">
                         <ul>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Acceso a la plataforma para contenido exclusivo</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Sesiones con expertos en vivo</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Grabaciones de las sesiones</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Certificación al finalizar el curso</span>
                             </li>
                             <li>
-                                <input type="checkbox" checked>
-                                <label>Option 1</label>
+                                <i class="bi bi-check-circle-fill"></i>
+                                <span>Beneficios por ser miembro de la comunidad</span>
                             </li>
                         </ul>
                     </div>
@@ -146,13 +146,13 @@
         <div class="site-contact">
             <div class="contact-header">
                 <div>
-                    <h2>We have branches all over</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, nisi tempora cupiditate delectus ipsa reprehenderit quas.</p>
+                    <h2>Estudia con nosotros desde cualquier parte del mundo</h2>
+                    <p>Tendrás acceso a profesores calificados en tiempo real. Este curso es personalizado, conveniente, accesible y te permite dar seguimiento a tu progreso.</p>
                 </div>
                 <img src="assets/map.svg">
             </div>
             <div class="contact-form">
-                <img src="https://images.unsplash.com/photo-1543269866-487350d6fa5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGJ1c2luZXNzJTIwd29tYW58ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+                <img src="https://images.unsplash.com/photo-1491975474562-1f4e30bc9468?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8b25saW5lJTIwY2xhc3N8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
                 <div>
                     <form class="form">
                         <h3>Contáctate con nosotros</h3>
@@ -181,45 +181,45 @@
     <footer class="site-footer">
         <div class="footer-1">
             <div>
-                <h3>Consulting Agency For Your Business</h3>
-                <p>The quix fox jumps over the lazy dog</p>
+                <h3>Consulta por un plan empresarial</h3>
+                <p>Tenemos las mejores soluciones de aprendizaje de idiomas para tu empresa</p>
             </div>
             <a href="">Contáctanos</a>
         </div>
         <div class="footer-2">
             <div>
                 <h5>Información</h5>
-                <p>About Us</p>
-                <p>Carrier</p>
-                <p>We are hiring</p>
+                <p>Sobre Nosotros</p>
+                <p>Historia</p>
+                <p>Trabaja con Nosotros</p>
                 <p>Blog</p>
             </div>
             <div>
-                <h5>Legal</h5>
-                <p>About Us</p>
-                <p>Carrier</p>
-                <p>We are hiring</p>
-                <p>Blog</p>
+                <h5>Idiomas</h5>
+                <p>Inglés</p>
+                <p>Francés</p>
+                <p>Italiano</p>
+                <p>Alemán</p>
             </div>
             <div>
-                <h5>Características</h5>
-                <p>About Us</p>
-                <p>Carrier</p>
-                <p>We are hiring</p>
-                <p>Blog</p>
+                <h5>Cursos</h5>
+                <p>Para niños</p>
+                <p>Para adultos</p>
+                <p>Para empresas</p>
+                <p>Paquetes familiares</p>
             </div>
             <div>
                 <h5>Recursos</h5>
-                <p>About Us</p>
-                <p>Carrier</p>
-                <p>We are hiring</p>
-                <p>Blog</p>
+                <p>Plataforma</p>
+                <p>Webinars</p>
+                <p>Canales</p>
+                <p>Youtube</p>
             </div>
             <div>
                 <h5>Encuéntranos</h5>
                 <p><i class="bi bi-telephone"></i> (593) 229-847-5316</p>
                 <p><i class="bi bi-geo-alt"></i> Carrier</p>
-                <p><i class="bi bi-envelope"></i> brand@example.com</p>
+                <p><i class="bi bi-envelope"></i> brand@live.com</p>
             </div>
         </div>
         <div class="footer-3">
