responsive media 600px

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
@@ -29,7 +30,7 @@
     <main>
         <div class="site-price">
             <div class="price-header">
-                <h2>Elige tu suscripción</h2>
+                <h2>Elige Tu Suscripción</h2>
                 <p>¿Te gustaría mejorar tu nivel o hablar con fluidez? <br> Elige el plan de aprendizaje que mejor se adapta a tus objetivos:  básico, premium, profesional</p>
             </div>
             <div class="pricing-table">
@@ -182,7 +183,7 @@
         <div class="footer-1">
             <div>
                 <h3>Consulta por un plan empresarial</h3>
-                <p>Tenemos las mejores soluciones de aprendizaje de idiomas para tu empresa</p>
+                <p>Tenemos las mejores soluciones de aprendizaje de idiomas para tu empresa.</p>
             </div>
             <a href="">Contáctanos</a>
         </div>
