media query 992px

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <header>
         <div class="site-hero">
-            <nav class="site-nav">
-                <div class="site-logo">BRANDNAME</div>
-                <div class="site-options">
+            <nav>
+                <div>BRANDNAME</div>
+                <div>
                     <a href="">Inicio</a>
-                    <a href="">Productos</a>
+                    <a href="">Cursos</a>
                     <a href="">Precios</a>
                     <a href="">Contacto</a>
                 </div>
-                <div class="site-options2">
+                <div>
                     <a href="">Iniciar Sesión</a>
                     <a href="">Comenzar</a>
                 </div>
