--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
             </div>
         </div>
         <div class="separador"></div>
+        <div class="boton-up" id="boton-up">
+            <i class="bi bi-chevron-double-up"></i>
+        </div>
     </main>
     <footer class="site-footer">
         <div class="footer-1">
@@ -232,5 +235,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
