--- a/index.html
+++ b/index.html
@@ -12,22 +12,59 @@
 <body>
     <header>
         <div class="site-hero">
-            <nav>
+            <nav class="site-nav">
                 <div>BRANDNAME</div>
-                <div>
+                <div class="nav-2">
                     <a href="">Inicio</a>
                     <a href="">Cursos</a>
                     <a href="">Precios</a>
                     <a href="">Contacto</a>
                 </div>
-                <div>
+                <div class="nav-3">
                     <a href="">Iniciar Sesión</a>
-                    <a href="">Comenzar</a>
+                    <a class="btn-comenzar" href="">Comenzar</a>
                 </div>
             </nav>
+            <div class="site-title">
+                <h1>Aprende un nuevo idioma desde la comodidad de tu hogar</h1>
+                <p>¡Todos los cursos que te imagenes a un solo un clic!</p>
+                <div>
+                    <a class="btn btn-ins">Inscribirse</a>
+                    <a class="btn btn-ver">Ver más</a>
+                </div>
+            </div>
         </div>
     </header>
     <main>
+        <div class="site-price">
+            <div class="price-header">
+                <h2>Testimonios De Nuestros Clientes</h2>
+                <p>Contamos con la confianza de más de 20 mil usuarios en todo el mundo.<br>¡Mira lo que dicen de nosotros!</p>
+            </div>
+            <div class="pricing-table">
+                <div class="card">
+                    <blockquote>Mi experiencia al contratar bussu es excelente, en poco tiempo he avanzado como no tenia idea. Me encanta la plataforma y los métodos de enseñanza.  </blockquote>
+                    <div class="author">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample1.jpg" />
+                        <h5>Mónica Sánchez <span>Estudiante</span></h5>
+                    </div>
+                </div>
+                <div class="card ">
+                    <blockquote>Es muy amigable, llevadero y efectivo. Muy recomendable para los que se inician, los que retoman o los que quieren profundizar en áreas específicas del inglés y otros idiomas.</blockquote>
+                    <div class="author">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample24.jpg" />
+                        <h5>Lizbeth Prado<span>Estudiante</span></h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <blockquote>Es la mejor app que he probado para aprender inglés por cuenta propia, además su precio es accesible y todas la clases de gramática son muy bien explicadas.</blockquote>
+                    <div class="author">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg"/>
+                        <h5>Romina Guerra<span>Estudiante</span></h5>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="site-price">
             <div class="price-header">
                 <h2>Elige Tu Suscripción</h2>
