--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
         </div>
     </header>
     <main>
+        <div class="site-content">
+            <div>
+                <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGVhcm4lMjBvbmxpbmV8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+            </div>
+            <div>
+                <h2>Nuestro programa de clases en línea es</h2>
+                <ul>
+                    <li>
+                        <span>Flexible:</span>
+                        Aprenderás un nuevo idioma mediante el Método Berlitz, con el cual podrás comunicarte de manera eficaz en situaciones reales.</li>
+                    <li>
+                        <span>Eficaz:</span>
+                        Con este programa podrás estudiar cuando y donde quieras.</li>
+                    <li>
+                        <span>Rápido:</span>
+                        Completa un nivel Berlitz de manera rápida ya que eliges la frecuencia del programa.</li>
+                    <li>
+                        <span>Práctico:</span>
+                        Tu curso contiene elementos culturales para enriquecer tu aprendizaje.
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="site-price">
             <div class="price-header">
                 <h2>Testimonios De Nuestros Clientes</h2>
