add responsive queries

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     <a href="">Iniciar Sesión</a>
                     <a class="btn-comenzar" href="">Comenzar</a>
                 </div>
+                <div class="menu">
+                    <i class="bi bi-list"></i>
+                </div>
             </nav>
             <div class="site-title">
                 <h1>Aprende un nuevo idioma desde la comodidad de tu hogar</h1>
@@ -37,9 +40,6 @@
     </header>
     <main>
         <div class="site-content">
-            <div>
-                <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGVhcm4lMjBvbmxpbmV8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
-            </div>
             <div>
                 <h2>Nuestro programa de clases en línea es</h2>
                 <ul>
@@ -57,6 +57,9 @@
                         Tu curso contiene elementos culturales para enriquecer tu aprendizaje.
                     </li>
                 </ul>
+            </div>
+            <div>
+                <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGVhcm4lMjBvbmxpbmV8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
             </div>
         </div>
         <div class="site-price">
