add slide animation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <div class="site-content">
-            <div>
+            <div class="no-slide">
                 <h2>Nuestro programa de clases en línea es</h2>
                 <ul>
                     <li>
@@ -58,8 +58,22 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGVhcm4lMjBvbmxpbmV8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+            <div class="slider">
+                <ul>
+                    <li>
+                        <img src="https://images.unsplash.com/photo-1600195077909-46e573870d99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bGVhcm58ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+                    </li>
+                    <li>
+                        <img src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8c3R1ZHl8ZW58MHwwfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+                    </li>
+                    <li>
+                        <img src="https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fGxlYXJufGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60">
+                    </li>
+                    <li>
+                        <img src="https://images.unsplash.com/photo-1494599948593-3dafe8338d71?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHN0dWR5fGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60">
+                    </li>
+                </ul>
+                
             </div>
         </div>
         <div class="site-price">
@@ -290,7 +304,7 @@
             </div>
         </div>
         <div class="footer-3">
-            <p>Desarrollado por Daniela Cisneros & José Alexis Moreno</p>
+            <p>Desarrollado por Daniela Cisneros</p>
             <div class="footer-icons">
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-twitter"></i></a>
